# hdx-resource-changedetection

./: CHANGELOG.md  Dockerfile  README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt
.config/: ruff.toml
.github/workflows/: build-docker-image.yaml  run-python-tests.yaml
docker/: docker-compose.yml
src/hdx/resource/changedetection/: __main__.py  dataset_processor.py  dataset_updater.py  head_results.py  head_retrieval.py  ratelimiter.py  resource_updater.py  results.py  retrieval.py  server_error.py  task_manager.py  tenacity_custom_wait.py  utilities.py
src/hdx/resource/changedetection/config/: project_configuration.yaml
tests/: conftest.py  test_dataset_processor.py  test_headresults.py  test_headretrieval.py  test_results.py  test_retrieval.py  test_task_manager.py
tests/fixtures/input/: datasets_0.json  datasets_1.json  datasets_10.json  datasets_11.json  datasets_12.json  datasets_13.json  datasets_2.json  datasets_3.json  datasets_4.json  datasets_5.json  datasets_6.json  datasets_7.json  datasets_8.json  datasets_9.json
