#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-resource-changedetection"
requires-python = ">= 3.10"
dependencies = [
    "aiohttp[speedups]",
    "aiolimiter",
    "hdx-python-scraper>= 2.6.5",
    "hdx-python-api>= 6.4.4",
    "hdx-python-country>= 3.9.4",
    "hdx-python-utilities>= 3.8.7",
    "prettytable",
    "redis",
    "tenacity",
    "tqdm"
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-resource-changedetection"

[project.optional-dependencies]
test = ["pytest", "pytest-check", "pytest-cov", "pytest-asyncio"]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.resource.changedetection.__main__:main"
